@@ -12,6 +12,8 @@ Bugfixes
 
 * Fix handling of conflicts between posts/pages and indexes generated
   by ``CATEGORY_PAGES_FOLLOW_DESTPATH``
+* Fix default date format to ``yyyy-MM-dd`` to avoid bug with ISO
+  years (Issue #3337)
 * Remove ``extra_header`` and ``extra_footer`` from ``base`` theme
   due to incompatibility with Mako. The blocks are still available
   in ``bootstrap4`` and ``bootblog4``. (Issue #3319 via #3291)
